--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,8 +31,8 @@ jobs:
       run: npm run prettier
 
     - name: Run Jest Tests
-      env:
-        CI: true
+      # env:
+      #   CI: true
       run: npm run test
 
     - name: Build the project
